# agent-project-issues

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  README.md  SECURITY.md  config.example.yml  description.md  project-issues.spec  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dispatch.yml  release.yml  test.yml
.serena/: .reminder-state.json  project.yml
.seretos/: projects.yml
hooks/: hooks.json  security_hint.mjs  security_hint.py
release/wrappers/: project-issues.cmd
scripts/: build.ps1  sync-libs.ps1  test.ps1
skills/project-issues/: SKILL.md
src/project_issues_plugin/: __main__.py  config.py  markers.py  refs.py  server.py
src/project_issues_plugin/providers/: azuredevops.py  base.py  github.py  gitlab.py
src/project_issues_plugin/tools/: _log_slicing.py  _providers.py  _slicing.py  bulk.py  comments.py  labels.py  pipelines.py  projects.py  pulls.py  relations.py  tickets.py
tests/: test_118_response_shape.py  test_179_config_example_board.py  test_180_docstring_behavior.py  test_181_docstring_pr_cross_provider.py  test_183_ux_polish_docstrings.py  test_194_board_docs.py  test_196_azure_docs.py  test_212_docstring_speculative_merge_commit_sha_cross_provider.py  test_230_ensure_board_column.py  test_azuredevops_misc.py  test_azuredevops_pulls.py  test_azuredevops_scaffold.py  test_azuredevops_tickets.py  test_board_columns_169_170.py  test_bulk.py  test_comments.py  test_comments_filtering.py  test_config.py  test_default_board_column_232.py  test_docstring_119_schema_clarity.py  test_docstring_197_relations_comments_clarity.py  test_docstring_213_github_status_key.py  test_docstring_218_add_relation_return_shape.py  test_docstring_218_search_score_gray_zone.py  test_docstring_223_add_relation_returns_ordering.py  test_docstring_94_conventions.py  test_docstring_closed_status_80.py  test_docstring_lifecycle_99.py  test_docstring_surface_71.py  test_docstring_surface_sweep_95_96_102_103.py  test_docstring_verbatim_status_101.py  test_error_rewrap_195.py  test_error_rewrap_217.py  test_error_rewrap_218.py  test_github_ai_markers.py  test_github_list_filters.py  test_github_relations.py  test_github_token_probe.py  test_gitlab_issues.py  test_gitlab_pipelines.py  (+27 more)
