[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-issues-plugin"
version = "0.1.0"
description = "Claude Code plugin: MCP server for GitHub/GitLab/Azure DevOps issue management"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  "mcp>=1.2",
  # Domain layer extracted in agent-plugin-dev#5. Pinned via Git tag —
  # bump these when releasing a new lib version.
  "lib-python-config @ git+https://github.com/Seretos/lib-python-config@v0.1.0",
  "lib-python-projects @ git+https://github.com/Seretos/lib-python-projects@v0.1.0",
  # pydantic / ruamel.yaml / httpx come transitively via lib-python-projects;
  # they are kept out of this list intentionally so the plugin can only
  # talk to providers through the lib's BaseProvider surface.
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
