[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-issues-plugin"
version = "0.1.0"
description = "Claude Code plugin: MCP server for GitHub/GitLab/Azure DevOps issue management"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  "mcp>=1.2",
  # Floats on the libs' `release/0.x` moving branch so minor/patch releases
  # flow in on the next install/build without a plugin-side bump. The branch
  # is a fast-forward-only pointer to the latest 0.x-compatible commit.
  # Bump to `release/Nx` once the lib reaches Nx.0.0 with breaking changes.
  "lib-python-config @ git+https://github.com/Seretos/lib-python-config@release/0.x",
  # Pinned to an exact immutable tag (v0.1.10). New lib versions arrive via an
  # explicit chore ticket that updates this pin — not silently through a moving
  # branch. See scripts/sync-libs.ps1 which force-reinstalls this ref to
  # prevent a local editable-install from shadowing the pinned release.
  "lib-python-projects @ git+https://github.com/Seretos/lib-python-projects@v0.1.10",
  # pydantic / ruamel.yaml / httpx come transitively via lib-python-projects;
  # they are kept out of this list intentionally so the plugin can only
  # talk to providers through the lib's BaseProvider surface.
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
